src/test/ui/issues/issue-2848.stderr
error[E0408]: variable `beta` is not bound in all patterns
  --> $DIR/issue-2848.rs:14:7
   |
LL |       alpha | beta => {}
   |       ^^^^^   ---- variable not in all patterns
   |       |
   |       pattern doesn't bind `beta`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0408`.
